// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calculate available area with agreements should return 1 stack for 1 existing agreement actions, 1 stack for 1 planned action: should return 1 stack for 1 existing agreement actions, 1 stack for 1 planned action,SD6747-7269 CMOR1-explanations 1`] = `
[
  {
    "content": [
      "Action code - CMOR1",
      "Parcel Id - SD6747 7269",
    ],
    "title": "Application Information",
  },
  {
    "content": [],
    "title": "Land Covers For Parcel",
  },
  {
    "content": [
      "UPL1 - 0.1 ha",
      "UPL2 - 0.1 ha",
    ],
    "title": "Existing actions",
  },
  {
    "content": [
      "Permanent grassland (130) - Permanent grassland (131)",
      "Water/irrigation features (240) - Drain/ditch/dyke (241)",
      "Water/irrigation features (240) - Pond (243)",
      "Rock (250) - Scree (251)",
      "Rock (250) - Boulders (252)",
      "Rock (250) - Rocky outcrop (253)",
      "Heaps (270) - Heaps (271)",
      "Notional features (280) - Notional - rock (281)",
      "Notional features (280) - Notional - bracken (282)",
      "Notional features (280) - Notional - scrub (283)",
      "Notional features (280) - Notional - water (285)",
      "Notional features (280) - Notional - natural (286)",
      "Notional features (280) - Notional - manmade (287)",
      "Notional features (280) - Notional - mixed (288)",
      "Non-agricultural area (300) - Non-agricultural area (300)",
      "Woodland (330) - Scrub - ungrazeable (347)",
      "Inland water (580) - Rivers and Streams Type 2 (582)",
      "Inland water (580) - Rivers and Streams Type 3 (583)",
      "Wetland (590) - Shingle (591)",
      "Wetland (590) - Fen marsh & swamp (592)",
      "Wetland (590) - Bog (593)",
      "Coastal features (620) - Cliffs (621)",
      "Natural transport - tracks and gallops (640) - Gallop (641)",
      "Natural transport - tracks and gallops (640) - Track - natural surface (643)",
      "Heath land and bracken (650) - Heath land and bracken - ungrazeable (651)",
    ],
    "title": "Valid land covers for action: CMOR1",
  },
  {
    "content": [
      "= 0 ha",
    ],
    "title": "Total valid land covers",
  },
  {
    "content": [
      "UPL1 has the following valid land covers in common with the applied for action: ",
      "- Permanent grassland (130)",
      "- Permanent grassland (131)",
      "- Water/irrigation features (240)",
      "- Drain/ditch/dyke (241)",
      "- Pond (243)",
      "- Rock (250)",
      "- Scree (251)",
      "- Boulders (252)",
      "- Rocky outcrop (253)",
      "- Heaps (270)",
      "- Heaps (271)",
      "- Notional features (280)",
      "- Notional - rock (281)",
      "- Notional - bracken (282)",
      "- Notional - scrub (283)",
      "- Notional - water (285)",
      "- Notional - natural (286)",
      "- Notional - manmade (287)",
      "- Notional - mixed (288)",
      "- Non-agricultural area (300)",
      "- Woodland (330)",
      "- Scrub - ungrazeable (347)",
      "- Inland water (580)",
      "- Rivers and Streams Type 2 (582)",
      "- Rivers and Streams Type 3 (583)",
      "- Wetland (590)",
      "- Shingle (591)",
      "- Fen marsh & swamp (592)",
      "- Bog (593)",
      "- Coastal features (620)",
      "- Cliffs (621)",
      "- Natural transport - tracks and gallops (640)",
      "- Gallop (641)",
      "- Track - natural surface (643)",
      "- Heath land and bracken (650)",
      "- Heath land and bracken - ungrazeable (651)",
      "UPL2 has the following valid land covers in common with the applied for action: ",
      "- Permanent grassland (130)",
      "- Permanent grassland (131)",
      "- Water/irrigation features (240)",
      "- Drain/ditch/dyke (241)",
      "- Pond (243)",
      "- Rock (250)",
      "- Scree (251)",
      "- Boulders (252)",
      "- Rocky outcrop (253)",
      "- Heaps (270)",
      "- Heaps (271)",
      "- Notional features (280)",
      "- Notional - rock (281)",
      "- Notional - bracken (282)",
      "- Notional - scrub (283)",
      "- Notional - water (285)",
      "- Notional - natural (286)",
      "- Notional - manmade (287)",
      "- Notional - mixed (288)",
      "- Non-agricultural area (300)",
      "- Woodland (330)",
      "- Scrub - ungrazeable (347)",
      "- Inland water (580)",
      "- Rivers and Streams Type 2 (582)",
      "- Rivers and Streams Type 3 (583)",
      "- Wetland (590)",
      "- Shingle (591)",
      "- Fen marsh & swamp (592)",
      "- Bog (593)",
      "- Coastal features (620)",
      "- Cliffs (621)",
      "- Natural transport - tracks and gallops (640)",
      "- Gallop (641)",
      "- Track - natural surface (643)",
      "- Heath land and bracken (650)",
      "- Heath land and bracken - ungrazeable (651)",
      "",
      "Actions included for stacking:",
      "",
      "- UPL1",
      "- UPL2",
    ],
    "title": "Common land covers",
  },
  {
    "content": [],
    "title": "Find area of existing action that must be on the same land cover as CMOR1",
  },
  {
    "content": [
      "Stack 1 - UPL1 - 0.1 ha",
      "Stack 2 - UPL2 - 0.1 ha",
      "",
      "Explanation:",
      "Adding UPL1 (area 0.1 ha)",
      "  Created Stack 1 for UPL1 with area 0.1 ha",
      "Adding UPL2 (area 0.1 ha)",
      "  UPL2 is not compatible with: UPL1 in Stack 1",
      "  Created Stack 2 for UPL2 with area 0.1 ha",
    ],
    "title": "Stacks",
  },
  {
    "content": [
      "Total valid land cover: 0 ha",
      "= 0 ha available for CMOR1",
    ],
    "title": "Result",
  },
]
`;

exports[`Calculate available area with agreements should return 1 stack for 1 existing agreement actions, 1 stack for 1 planned action: should return 1 stack for 1 existing agreement actions, 1 stack for 1 planned action,SD6747-7269 UPL1-explanations 1`] = `
[
  {
    "content": [
      "Action code - UPL1",
      "Parcel Id - SD6747 7269",
    ],
    "title": "Application Information",
  },
  {
    "content": [],
    "title": "Land Covers For Parcel",
  },
  {
    "content": [
      "UPL1 - 0.1 ha",
      "UPL2 - 0.1 ha",
    ],
    "title": "Existing actions",
  },
  {
    "content": [
      "Permanent grassland (130) - Permanent grassland (131)",
      "Water/irrigation features (240) - Drain/ditch/dyke (241)",
      "Water/irrigation features (240) - Pond (243)",
      "Rock (250) - Scree (251)",
      "Rock (250) - Boulders (252)",
      "Rock (250) - Rocky outcrop (253)",
      "Heaps (270) - Heaps (271)",
      "Notional features (280) - Notional - rock (281)",
      "Notional features (280) - Notional - bracken (282)",
      "Notional features (280) - Notional - scrub (283)",
      "Notional features (280) - Notional - water (285)",
      "Notional features (280) - Notional - natural (286)",
      "Notional features (280) - Notional - manmade (287)",
      "Notional features (280) - Notional - mixed (288)",
      "Non-agricultural area (300) - Non-agricultural area (300)",
      "Woodland (330) - Scrub - ungrazeable (347)",
      "Inland water (580) - Rivers and Streams Type 2 (582)",
      "Inland water (580) - Rivers and Streams Type 3 (583)",
      "Wetland (590) - Shingle (591)",
      "Wetland (590) - Fen marsh & swamp (592)",
      "Wetland (590) - Bog (593)",
      "Coastal features (620) - Cliffs (621)",
      "Natural transport - tracks and gallops (640) - Gallop (641)",
      "Natural transport - tracks and gallops (640) - Track - natural surface (643)",
      "Heath land and bracken (650) - Heath land and bracken - ungrazeable (651)",
    ],
    "title": "Valid land covers for action: UPL1",
  },
  {
    "content": [
      "= 0 ha",
    ],
    "title": "Total valid land covers",
  },
  {
    "content": [
      "UPL1 has the following valid land covers in common with the applied for action: ",
      "- Permanent grassland (130)",
      "- Permanent grassland (131)",
      "- Water/irrigation features (240)",
      "- Drain/ditch/dyke (241)",
      "- Pond (243)",
      "- Rock (250)",
      "- Scree (251)",
      "- Boulders (252)",
      "- Rocky outcrop (253)",
      "- Heaps (270)",
      "- Heaps (271)",
      "- Notional features (280)",
      "- Notional - rock (281)",
      "- Notional - bracken (282)",
      "- Notional - scrub (283)",
      "- Notional - water (285)",
      "- Notional - natural (286)",
      "- Notional - manmade (287)",
      "- Notional - mixed (288)",
      "- Non-agricultural area (300)",
      "- Woodland (330)",
      "- Scrub - ungrazeable (347)",
      "- Inland water (580)",
      "- Rivers and Streams Type 2 (582)",
      "- Rivers and Streams Type 3 (583)",
      "- Wetland (590)",
      "- Shingle (591)",
      "- Fen marsh & swamp (592)",
      "- Bog (593)",
      "- Coastal features (620)",
      "- Cliffs (621)",
      "- Natural transport - tracks and gallops (640)",
      "- Gallop (641)",
      "- Track - natural surface (643)",
      "- Heath land and bracken (650)",
      "- Heath land and bracken - ungrazeable (651)",
      "UPL2 has the following valid land covers in common with the applied for action: ",
      "- Permanent grassland (130)",
      "- Permanent grassland (131)",
      "- Water/irrigation features (240)",
      "- Drain/ditch/dyke (241)",
      "- Pond (243)",
      "- Rock (250)",
      "- Scree (251)",
      "- Boulders (252)",
      "- Rocky outcrop (253)",
      "- Heaps (270)",
      "- Heaps (271)",
      "- Notional features (280)",
      "- Notional - rock (281)",
      "- Notional - bracken (282)",
      "- Notional - scrub (283)",
      "- Notional - water (285)",
      "- Notional - natural (286)",
      "- Notional - manmade (287)",
      "- Notional - mixed (288)",
      "- Non-agricultural area (300)",
      "- Woodland (330)",
      "- Scrub - ungrazeable (347)",
      "- Inland water (580)",
      "- Rivers and Streams Type 2 (582)",
      "- Rivers and Streams Type 3 (583)",
      "- Wetland (590)",
      "- Shingle (591)",
      "- Fen marsh & swamp (592)",
      "- Bog (593)",
      "- Coastal features (620)",
      "- Cliffs (621)",
      "- Natural transport - tracks and gallops (640)",
      "- Gallop (641)",
      "- Track - natural surface (643)",
      "- Heath land and bracken (650)",
      "- Heath land and bracken - ungrazeable (651)",
      "",
      "Actions included for stacking:",
      "",
      "- UPL1",
      "- UPL2",
    ],
    "title": "Common land covers",
  },
  {
    "content": [],
    "title": "Find area of existing action that must be on the same land cover as UPL1",
  },
  {
    "content": [
      "Stack 1 - UPL1 - 0.1 ha",
      "Stack 2 - UPL2 - 0.1 ha",
      "",
      "Explanation:",
      "Adding UPL1 (area 0.1 ha)",
      "  Created Stack 1 for UPL1 with area 0.1 ha",
      "Adding UPL2 (area 0.1 ha)",
      "  UPL2 is not compatible with: UPL1 in Stack 1",
      "  Created Stack 2 for UPL2 with area 0.1 ha",
    ],
    "title": "Stacks",
  },
  {
    "content": [
      "Total valid land cover: 0 ha",
      "- 0.1 (Stack 1)",
      "- 0.1 (Stack 2)",
      "= -0.2 ha available for UPL1",
    ],
    "title": "Result",
  },
]
`;

exports[`Calculate available area with agreements should return 1 stack for 1 existing agreement actions, 1 stack for 1 planned action: should return 1 stack for 1 existing agreement actions, 1 stack for 1 planned action,SD6747-7269 UPL2-explanations 1`] = `
[
  {
    "content": [
      "Action code - UPL2",
      "Parcel Id - SD6747 7269",
    ],
    "title": "Application Information",
  },
  {
    "content": [],
    "title": "Land Covers For Parcel",
  },
  {
    "content": [
      "UPL1 - 0.1 ha",
      "UPL2 - 0.1 ha",
    ],
    "title": "Existing actions",
  },
  {
    "content": [
      "Permanent grassland (130) - Permanent grassland (131)",
      "Water/irrigation features (240) - Drain/ditch/dyke (241)",
      "Water/irrigation features (240) - Pond (243)",
      "Rock (250) - Scree (251)",
      "Rock (250) - Boulders (252)",
      "Rock (250) - Rocky outcrop (253)",
      "Heaps (270) - Heaps (271)",
      "Notional features (280) - Notional - rock (281)",
      "Notional features (280) - Notional - bracken (282)",
      "Notional features (280) - Notional - scrub (283)",
      "Notional features (280) - Notional - water (285)",
      "Notional features (280) - Notional - natural (286)",
      "Notional features (280) - Notional - manmade (287)",
      "Notional features (280) - Notional - mixed (288)",
      "Non-agricultural area (300) - Non-agricultural area (300)",
      "Woodland (330) - Scrub - ungrazeable (347)",
      "Inland water (580) - Rivers and Streams Type 2 (582)",
      "Inland water (580) - Rivers and Streams Type 3 (583)",
      "Wetland (590) - Shingle (591)",
      "Wetland (590) - Fen marsh & swamp (592)",
      "Wetland (590) - Bog (593)",
      "Coastal features (620) - Cliffs (621)",
      "Natural transport - tracks and gallops (640) - Gallop (641)",
      "Natural transport - tracks and gallops (640) - Track - natural surface (643)",
      "Heath land and bracken (650) - Heath land and bracken - ungrazeable (651)",
    ],
    "title": "Valid land covers for action: UPL2",
  },
  {
    "content": [
      "= 0 ha",
    ],
    "title": "Total valid land covers",
  },
  {
    "content": [
      "UPL1 has the following valid land covers in common with the applied for action: ",
      "- Permanent grassland (130)",
      "- Permanent grassland (131)",
      "- Water/irrigation features (240)",
      "- Drain/ditch/dyke (241)",
      "- Pond (243)",
      "- Rock (250)",
      "- Scree (251)",
      "- Boulders (252)",
      "- Rocky outcrop (253)",
      "- Heaps (270)",
      "- Heaps (271)",
      "- Notional features (280)",
      "- Notional - rock (281)",
      "- Notional - bracken (282)",
      "- Notional - scrub (283)",
      "- Notional - water (285)",
      "- Notional - natural (286)",
      "- Notional - manmade (287)",
      "- Notional - mixed (288)",
      "- Non-agricultural area (300)",
      "- Woodland (330)",
      "- Scrub - ungrazeable (347)",
      "- Inland water (580)",
      "- Rivers and Streams Type 2 (582)",
      "- Rivers and Streams Type 3 (583)",
      "- Wetland (590)",
      "- Shingle (591)",
      "- Fen marsh & swamp (592)",
      "- Bog (593)",
      "- Coastal features (620)",
      "- Cliffs (621)",
      "- Natural transport - tracks and gallops (640)",
      "- Gallop (641)",
      "- Track - natural surface (643)",
      "- Heath land and bracken (650)",
      "- Heath land and bracken - ungrazeable (651)",
      "UPL2 has the following valid land covers in common with the applied for action: ",
      "- Permanent grassland (130)",
      "- Permanent grassland (131)",
      "- Water/irrigation features (240)",
      "- Drain/ditch/dyke (241)",
      "- Pond (243)",
      "- Rock (250)",
      "- Scree (251)",
      "- Boulders (252)",
      "- Rocky outcrop (253)",
      "- Heaps (270)",
      "- Heaps (271)",
      "- Notional features (280)",
      "- Notional - rock (281)",
      "- Notional - bracken (282)",
      "- Notional - scrub (283)",
      "- Notional - water (285)",
      "- Notional - natural (286)",
      "- Notional - manmade (287)",
      "- Notional - mixed (288)",
      "- Non-agricultural area (300)",
      "- Woodland (330)",
      "- Scrub - ungrazeable (347)",
      "- Inland water (580)",
      "- Rivers and Streams Type 2 (582)",
      "- Rivers and Streams Type 3 (583)",
      "- Wetland (590)",
      "- Shingle (591)",
      "- Fen marsh & swamp (592)",
      "- Bog (593)",
      "- Coastal features (620)",
      "- Cliffs (621)",
      "- Natural transport - tracks and gallops (640)",
      "- Gallop (641)",
      "- Track - natural surface (643)",
      "- Heath land and bracken (650)",
      "- Heath land and bracken - ungrazeable (651)",
      "",
      "Actions included for stacking:",
      "",
      "- UPL1",
      "- UPL2",
    ],
    "title": "Common land covers",
  },
  {
    "content": [],
    "title": "Find area of existing action that must be on the same land cover as UPL2",
  },
  {
    "content": [
      "Stack 1 - UPL1 - 0.1 ha",
      "Stack 2 - UPL2 - 0.1 ha",
      "",
      "Explanation:",
      "Adding UPL1 (area 0.1 ha)",
      "  Created Stack 1 for UPL1 with area 0.1 ha",
      "Adding UPL2 (area 0.1 ha)",
      "  UPL2 is not compatible with: UPL1 in Stack 1",
      "  Created Stack 2 for UPL2 with area 0.1 ha",
    ],
    "title": "Stacks",
  },
  {
    "content": [
      "Total valid land cover: 0 ha",
      "- 0.1 (Stack 1)",
      "- 0.1 (Stack 2)",
      "= -0.2 ha available for UPL2",
    ],
    "title": "Result",
  },
]
`;

exports[`Calculate available area with agreements should return 1 stack for 1 existing agreement actions, 1 stack for 1 planned action: should return 1 stack for 1 existing agreement actions, 1 stack for 1 planned action,SD6747-7269 UPL3-explanations 1`] = `
[
  {
    "content": [
      "Action code - UPL3",
      "Parcel Id - SD6747 7269",
    ],
    "title": "Application Information",
  },
  {
    "content": [],
    "title": "Land Covers For Parcel",
  },
  {
    "content": [
      "UPL1 - 0.1 ha",
      "UPL2 - 0.1 ha",
    ],
    "title": "Existing actions",
  },
  {
    "content": [
      "Permanent grassland (130) - Permanent grassland (131)",
      "Water/irrigation features (240) - Drain/ditch/dyke (241)",
      "Water/irrigation features (240) - Pond (243)",
      "Rock (250) - Scree (251)",
      "Rock (250) - Boulders (252)",
      "Rock (250) - Rocky outcrop (253)",
      "Heaps (270) - Heaps (271)",
      "Notional features (280) - Notional - rock (281)",
      "Notional features (280) - Notional - bracken (282)",
      "Notional features (280) - Notional - scrub (283)",
      "Notional features (280) - Notional - water (285)",
      "Notional features (280) - Notional - natural (286)",
      "Notional features (280) - Notional - manmade (287)",
      "Notional features (280) - Notional - mixed (288)",
      "Non-agricultural area (300) - Non-agricultural area (300)",
      "Woodland (330) - Scrub - ungrazeable (347)",
      "Inland water (580) - Rivers and Streams Type 2 (582)",
      "Inland water (580) - Rivers and Streams Type 3 (583)",
      "Wetland (590) - Shingle (591)",
      "Wetland (590) - Fen marsh & swamp (592)",
      "Wetland (590) - Bog (593)",
      "Coastal features (620) - Cliffs (621)",
      "Natural transport - tracks and gallops (640) - Gallop (641)",
      "Natural transport - tracks and gallops (640) - Track - natural surface (643)",
      "Heath land and bracken (650) - Heath land and bracken - ungrazeable (651)",
    ],
    "title": "Valid land covers for action: UPL3",
  },
  {
    "content": [
      "= 0 ha",
    ],
    "title": "Total valid land covers",
  },
  {
    "content": [
      "UPL1 has the following valid land covers in common with the applied for action: ",
      "- Permanent grassland (130)",
      "- Permanent grassland (131)",
      "- Water/irrigation features (240)",
      "- Drain/ditch/dyke (241)",
      "- Pond (243)",
      "- Rock (250)",
      "- Scree (251)",
      "- Boulders (252)",
      "- Rocky outcrop (253)",
      "- Heaps (270)",
      "- Heaps (271)",
      "- Notional features (280)",
      "- Notional - rock (281)",
      "- Notional - bracken (282)",
      "- Notional - scrub (283)",
      "- Notional - water (285)",
      "- Notional - natural (286)",
      "- Notional - manmade (287)",
      "- Notional - mixed (288)",
      "- Non-agricultural area (300)",
      "- Woodland (330)",
      "- Scrub - ungrazeable (347)",
      "- Inland water (580)",
      "- Rivers and Streams Type 2 (582)",
      "- Rivers and Streams Type 3 (583)",
      "- Wetland (590)",
      "- Shingle (591)",
      "- Fen marsh & swamp (592)",
      "- Bog (593)",
      "- Coastal features (620)",
      "- Cliffs (621)",
      "- Natural transport - tracks and gallops (640)",
      "- Gallop (641)",
      "- Track - natural surface (643)",
      "- Heath land and bracken (650)",
      "- Heath land and bracken - ungrazeable (651)",
      "UPL2 has the following valid land covers in common with the applied for action: ",
      "- Permanent grassland (130)",
      "- Permanent grassland (131)",
      "- Water/irrigation features (240)",
      "- Drain/ditch/dyke (241)",
      "- Pond (243)",
      "- Rock (250)",
      "- Scree (251)",
      "- Boulders (252)",
      "- Rocky outcrop (253)",
      "- Heaps (270)",
      "- Heaps (271)",
      "- Notional features (280)",
      "- Notional - rock (281)",
      "- Notional - bracken (282)",
      "- Notional - scrub (283)",
      "- Notional - water (285)",
      "- Notional - natural (286)",
      "- Notional - manmade (287)",
      "- Notional - mixed (288)",
      "- Non-agricultural area (300)",
      "- Woodland (330)",
      "- Scrub - ungrazeable (347)",
      "- Inland water (580)",
      "- Rivers and Streams Type 2 (582)",
      "- Rivers and Streams Type 3 (583)",
      "- Wetland (590)",
      "- Shingle (591)",
      "- Fen marsh & swamp (592)",
      "- Bog (593)",
      "- Coastal features (620)",
      "- Cliffs (621)",
      "- Natural transport - tracks and gallops (640)",
      "- Gallop (641)",
      "- Track - natural surface (643)",
      "- Heath land and bracken (650)",
      "- Heath land and bracken - ungrazeable (651)",
      "",
      "Actions included for stacking:",
      "",
      "- UPL1",
      "- UPL2",
    ],
    "title": "Common land covers",
  },
  {
    "content": [],
    "title": "Find area of existing action that must be on the same land cover as UPL3",
  },
  {
    "content": [
      "Stack 1 - UPL1 - 0.1 ha",
      "Stack 2 - UPL2 - 0.1 ha",
      "",
      "Explanation:",
      "Adding UPL1 (area 0.1 ha)",
      "  Created Stack 1 for UPL1 with area 0.1 ha",
      "Adding UPL2 (area 0.1 ha)",
      "  UPL2 is not compatible with: UPL1 in Stack 1",
      "  Created Stack 2 for UPL2 with area 0.1 ha",
    ],
    "title": "Stacks",
  },
  {
    "content": [
      "Total valid land cover: 0 ha",
      "- 0.1 (Stack 1)",
      "- 0.1 (Stack 2)",
      "= -0.2 ha available for UPL3",
    ],
    "title": "Result",
  },
]
`;

exports[`Calculate available area with agreements should return 1 stack for 1 existing agreement actions: should return 1 stack for 1 existing agreement actions,SD6747-7269 CMOR1-explanations 1`] = `
[
  {
    "content": [
      "Action code - CMOR1",
      "Parcel Id - SD6747 7269",
    ],
    "title": "Application Information",
  },
  {
    "content": [],
    "title": "Land Covers For Parcel",
  },
  {
    "content": [
      "UPL1 - 0.1 ha",
    ],
    "title": "Existing actions",
  },
  {
    "content": [
      "Permanent grassland (130) - Permanent grassland (131)",
      "Water/irrigation features (240) - Drain/ditch/dyke (241)",
      "Water/irrigation features (240) - Pond (243)",
      "Rock (250) - Scree (251)",
      "Rock (250) - Boulders (252)",
      "Rock (250) - Rocky outcrop (253)",
      "Heaps (270) - Heaps (271)",
      "Notional features (280) - Notional - rock (281)",
      "Notional features (280) - Notional - bracken (282)",
      "Notional features (280) - Notional - scrub (283)",
      "Notional features (280) - Notional - water (285)",
      "Notional features (280) - Notional - natural (286)",
      "Notional features (280) - Notional - manmade (287)",
      "Notional features (280) - Notional - mixed (288)",
      "Non-agricultural area (300) - Non-agricultural area (300)",
      "Woodland (330) - Scrub - ungrazeable (347)",
      "Inland water (580) - Rivers and Streams Type 2 (582)",
      "Inland water (580) - Rivers and Streams Type 3 (583)",
      "Wetland (590) - Shingle (591)",
      "Wetland (590) - Fen marsh & swamp (592)",
      "Wetland (590) - Bog (593)",
      "Coastal features (620) - Cliffs (621)",
      "Natural transport - tracks and gallops (640) - Gallop (641)",
      "Natural transport - tracks and gallops (640) - Track - natural surface (643)",
      "Heath land and bracken (650) - Heath land and bracken - ungrazeable (651)",
    ],
    "title": "Valid land covers for action: CMOR1",
  },
  {
    "content": [
      "= 0 ha",
    ],
    "title": "Total valid land covers",
  },
  {
    "content": [
      "UPL1 has the following valid land covers in common with the applied for action: ",
      "- Permanent grassland (130)",
      "- Permanent grassland (131)",
      "- Water/irrigation features (240)",
      "- Drain/ditch/dyke (241)",
      "- Pond (243)",
      "- Rock (250)",
      "- Scree (251)",
      "- Boulders (252)",
      "- Rocky outcrop (253)",
      "- Heaps (270)",
      "- Heaps (271)",
      "- Notional features (280)",
      "- Notional - rock (281)",
      "- Notional - bracken (282)",
      "- Notional - scrub (283)",
      "- Notional - water (285)",
      "- Notional - natural (286)",
      "- Notional - manmade (287)",
      "- Notional - mixed (288)",
      "- Non-agricultural area (300)",
      "- Woodland (330)",
      "- Scrub - ungrazeable (347)",
      "- Inland water (580)",
      "- Rivers and Streams Type 2 (582)",
      "- Rivers and Streams Type 3 (583)",
      "- Wetland (590)",
      "- Shingle (591)",
      "- Fen marsh & swamp (592)",
      "- Bog (593)",
      "- Coastal features (620)",
      "- Cliffs (621)",
      "- Natural transport - tracks and gallops (640)",
      "- Gallop (641)",
      "- Track - natural surface (643)",
      "- Heath land and bracken (650)",
      "- Heath land and bracken - ungrazeable (651)",
      "",
      "Actions included for stacking:",
      "",
      "- UPL1",
    ],
    "title": "Common land covers",
  },
  {
    "content": [],
    "title": "Find area of existing action that must be on the same land cover as CMOR1",
  },
  {
    "content": [
      "Stack 1 - UPL1 - 0.1 ha",
      "",
      "Explanation:",
      "Adding UPL1 (area 0.1 ha)",
      "  Created Stack 1 for UPL1 with area 0.1 ha",
    ],
    "title": "Stacks",
  },
  {
    "content": [
      "Total valid land cover: 0 ha",
      "= 0 ha available for CMOR1",
    ],
    "title": "Result",
  },
]
`;

exports[`Calculate available area with agreements should return 1 stack for 1 existing agreement actions: should return 1 stack for 1 existing agreement actions,SD6747-7269 UPL1-explanations 1`] = `
[
  {
    "content": [
      "Action code - UPL1",
      "Parcel Id - SD6747 7269",
    ],
    "title": "Application Information",
  },
  {
    "content": [],
    "title": "Land Covers For Parcel",
  },
  {
    "content": [
      "UPL1 - 0.1 ha",
    ],
    "title": "Existing actions",
  },
  {
    "content": [
      "Permanent grassland (130) - Permanent grassland (131)",
      "Water/irrigation features (240) - Drain/ditch/dyke (241)",
      "Water/irrigation features (240) - Pond (243)",
      "Rock (250) - Scree (251)",
      "Rock (250) - Boulders (252)",
      "Rock (250) - Rocky outcrop (253)",
      "Heaps (270) - Heaps (271)",
      "Notional features (280) - Notional - rock (281)",
      "Notional features (280) - Notional - bracken (282)",
      "Notional features (280) - Notional - scrub (283)",
      "Notional features (280) - Notional - water (285)",
      "Notional features (280) - Notional - natural (286)",
      "Notional features (280) - Notional - manmade (287)",
      "Notional features (280) - Notional - mixed (288)",
      "Non-agricultural area (300) - Non-agricultural area (300)",
      "Woodland (330) - Scrub - ungrazeable (347)",
      "Inland water (580) - Rivers and Streams Type 2 (582)",
      "Inland water (580) - Rivers and Streams Type 3 (583)",
      "Wetland (590) - Shingle (591)",
      "Wetland (590) - Fen marsh & swamp (592)",
      "Wetland (590) - Bog (593)",
      "Coastal features (620) - Cliffs (621)",
      "Natural transport - tracks and gallops (640) - Gallop (641)",
      "Natural transport - tracks and gallops (640) - Track - natural surface (643)",
      "Heath land and bracken (650) - Heath land and bracken - ungrazeable (651)",
    ],
    "title": "Valid land covers for action: UPL1",
  },
  {
    "content": [
      "= 0 ha",
    ],
    "title": "Total valid land covers",
  },
  {
    "content": [
      "UPL1 has the following valid land covers in common with the applied for action: ",
      "- Permanent grassland (130)",
      "- Permanent grassland (131)",
      "- Water/irrigation features (240)",
      "- Drain/ditch/dyke (241)",
      "- Pond (243)",
      "- Rock (250)",
      "- Scree (251)",
      "- Boulders (252)",
      "- Rocky outcrop (253)",
      "- Heaps (270)",
      "- Heaps (271)",
      "- Notional features (280)",
      "- Notional - rock (281)",
      "- Notional - bracken (282)",
      "- Notional - scrub (283)",
      "- Notional - water (285)",
      "- Notional - natural (286)",
      "- Notional - manmade (287)",
      "- Notional - mixed (288)",
      "- Non-agricultural area (300)",
      "- Woodland (330)",
      "- Scrub - ungrazeable (347)",
      "- Inland water (580)",
      "- Rivers and Streams Type 2 (582)",
      "- Rivers and Streams Type 3 (583)",
      "- Wetland (590)",
      "- Shingle (591)",
      "- Fen marsh & swamp (592)",
      "- Bog (593)",
      "- Coastal features (620)",
      "- Cliffs (621)",
      "- Natural transport - tracks and gallops (640)",
      "- Gallop (641)",
      "- Track - natural surface (643)",
      "- Heath land and bracken (650)",
      "- Heath land and bracken - ungrazeable (651)",
      "",
      "Actions included for stacking:",
      "",
      "- UPL1",
    ],
    "title": "Common land covers",
  },
  {
    "content": [],
    "title": "Find area of existing action that must be on the same land cover as UPL1",
  },
  {
    "content": [
      "Stack 1 - UPL1 - 0.1 ha",
      "",
      "Explanation:",
      "Adding UPL1 (area 0.1 ha)",
      "  Created Stack 1 for UPL1 with area 0.1 ha",
    ],
    "title": "Stacks",
  },
  {
    "content": [
      "Total valid land cover: 0 ha",
      "- 0.1 (Stack 1)",
      "= -0.1 ha available for UPL1",
    ],
    "title": "Result",
  },
]
`;

exports[`Calculate available area with agreements should return 1 stack for 1 existing agreement actions: should return 1 stack for 1 existing agreement actions,SD6747-7269 UPL2-explanations 1`] = `
[
  {
    "content": [
      "Action code - UPL2",
      "Parcel Id - SD6747 7269",
    ],
    "title": "Application Information",
  },
  {
    "content": [],
    "title": "Land Covers For Parcel",
  },
  {
    "content": [
      "UPL1 - 0.1 ha",
    ],
    "title": "Existing actions",
  },
  {
    "content": [
      "Permanent grassland (130) - Permanent grassland (131)",
      "Water/irrigation features (240) - Drain/ditch/dyke (241)",
      "Water/irrigation features (240) - Pond (243)",
      "Rock (250) - Scree (251)",
      "Rock (250) - Boulders (252)",
      "Rock (250) - Rocky outcrop (253)",
      "Heaps (270) - Heaps (271)",
      "Notional features (280) - Notional - rock (281)",
      "Notional features (280) - Notional - bracken (282)",
      "Notional features (280) - Notional - scrub (283)",
      "Notional features (280) - Notional - water (285)",
      "Notional features (280) - Notional - natural (286)",
      "Notional features (280) - Notional - manmade (287)",
      "Notional features (280) - Notional - mixed (288)",
      "Non-agricultural area (300) - Non-agricultural area (300)",
      "Woodland (330) - Scrub - ungrazeable (347)",
      "Inland water (580) - Rivers and Streams Type 2 (582)",
      "Inland water (580) - Rivers and Streams Type 3 (583)",
      "Wetland (590) - Shingle (591)",
      "Wetland (590) - Fen marsh & swamp (592)",
      "Wetland (590) - Bog (593)",
      "Coastal features (620) - Cliffs (621)",
      "Natural transport - tracks and gallops (640) - Gallop (641)",
      "Natural transport - tracks and gallops (640) - Track - natural surface (643)",
      "Heath land and bracken (650) - Heath land and bracken - ungrazeable (651)",
    ],
    "title": "Valid land covers for action: UPL2",
  },
  {
    "content": [
      "= 0 ha",
    ],
    "title": "Total valid land covers",
  },
  {
    "content": [
      "UPL1 has the following valid land covers in common with the applied for action: ",
      "- Permanent grassland (130)",
      "- Permanent grassland (131)",
      "- Water/irrigation features (240)",
      "- Drain/ditch/dyke (241)",
      "- Pond (243)",
      "- Rock (250)",
      "- Scree (251)",
      "- Boulders (252)",
      "- Rocky outcrop (253)",
      "- Heaps (270)",
      "- Heaps (271)",
      "- Notional features (280)",
      "- Notional - rock (281)",
      "- Notional - bracken (282)",
      "- Notional - scrub (283)",
      "- Notional - water (285)",
      "- Notional - natural (286)",
      "- Notional - manmade (287)",
      "- Notional - mixed (288)",
      "- Non-agricultural area (300)",
      "- Woodland (330)",
      "- Scrub - ungrazeable (347)",
      "- Inland water (580)",
      "- Rivers and Streams Type 2 (582)",
      "- Rivers and Streams Type 3 (583)",
      "- Wetland (590)",
      "- Shingle (591)",
      "- Fen marsh & swamp (592)",
      "- Bog (593)",
      "- Coastal features (620)",
      "- Cliffs (621)",
      "- Natural transport - tracks and gallops (640)",
      "- Gallop (641)",
      "- Track - natural surface (643)",
      "- Heath land and bracken (650)",
      "- Heath land and bracken - ungrazeable (651)",
      "",
      "Actions included for stacking:",
      "",
      "- UPL1",
    ],
    "title": "Common land covers",
  },
  {
    "content": [],
    "title": "Find area of existing action that must be on the same land cover as UPL2",
  },
  {
    "content": [
      "Stack 1 - UPL1 - 0.1 ha",
      "",
      "Explanation:",
      "Adding UPL1 (area 0.1 ha)",
      "  Created Stack 1 for UPL1 with area 0.1 ha",
    ],
    "title": "Stacks",
  },
  {
    "content": [
      "Total valid land cover: 0 ha",
      "- 0.1 (Stack 1)",
      "= -0.1 ha available for UPL2",
    ],
    "title": "Result",
  },
]
`;

exports[`Calculate available area with agreements should return 1 stack for 1 existing agreement actions: should return 1 stack for 1 existing agreement actions,SD6747-7269 UPL3-explanations 1`] = `
[
  {
    "content": [
      "Action code - UPL3",
      "Parcel Id - SD6747 7269",
    ],
    "title": "Application Information",
  },
  {
    "content": [],
    "title": "Land Covers For Parcel",
  },
  {
    "content": [
      "UPL1 - 0.1 ha",
    ],
    "title": "Existing actions",
  },
  {
    "content": [
      "Permanent grassland (130) - Permanent grassland (131)",
      "Water/irrigation features (240) - Drain/ditch/dyke (241)",
      "Water/irrigation features (240) - Pond (243)",
      "Rock (250) - Scree (251)",
      "Rock (250) - Boulders (252)",
      "Rock (250) - Rocky outcrop (253)",
      "Heaps (270) - Heaps (271)",
      "Notional features (280) - Notional - rock (281)",
      "Notional features (280) - Notional - bracken (282)",
      "Notional features (280) - Notional - scrub (283)",
      "Notional features (280) - Notional - water (285)",
      "Notional features (280) - Notional - natural (286)",
      "Notional features (280) - Notional - manmade (287)",
      "Notional features (280) - Notional - mixed (288)",
      "Non-agricultural area (300) - Non-agricultural area (300)",
      "Woodland (330) - Scrub - ungrazeable (347)",
      "Inland water (580) - Rivers and Streams Type 2 (582)",
      "Inland water (580) - Rivers and Streams Type 3 (583)",
      "Wetland (590) - Shingle (591)",
      "Wetland (590) - Fen marsh & swamp (592)",
      "Wetland (590) - Bog (593)",
      "Coastal features (620) - Cliffs (621)",
      "Natural transport - tracks and gallops (640) - Gallop (641)",
      "Natural transport - tracks and gallops (640) - Track - natural surface (643)",
      "Heath land and bracken (650) - Heath land and bracken - ungrazeable (651)",
    ],
    "title": "Valid land covers for action: UPL3",
  },
  {
    "content": [
      "= 0 ha",
    ],
    "title": "Total valid land covers",
  },
  {
    "content": [
      "UPL1 has the following valid land covers in common with the applied for action: ",
      "- Permanent grassland (130)",
      "- Permanent grassland (131)",
      "- Water/irrigation features (240)",
      "- Drain/ditch/dyke (241)",
      "- Pond (243)",
      "- Rock (250)",
      "- Scree (251)",
      "- Boulders (252)",
      "- Rocky outcrop (253)",
      "- Heaps (270)",
      "- Heaps (271)",
      "- Notional features (280)",
      "- Notional - rock (281)",
      "- Notional - bracken (282)",
      "- Notional - scrub (283)",
      "- Notional - water (285)",
      "- Notional - natural (286)",
      "- Notional - manmade (287)",
      "- Notional - mixed (288)",
      "- Non-agricultural area (300)",
      "- Woodland (330)",
      "- Scrub - ungrazeable (347)",
      "- Inland water (580)",
      "- Rivers and Streams Type 2 (582)",
      "- Rivers and Streams Type 3 (583)",
      "- Wetland (590)",
      "- Shingle (591)",
      "- Fen marsh & swamp (592)",
      "- Bog (593)",
      "- Coastal features (620)",
      "- Cliffs (621)",
      "- Natural transport - tracks and gallops (640)",
      "- Gallop (641)",
      "- Track - natural surface (643)",
      "- Heath land and bracken (650)",
      "- Heath land and bracken - ungrazeable (651)",
      "",
      "Actions included for stacking:",
      "",
      "- UPL1",
    ],
    "title": "Common land covers",
  },
  {
    "content": [],
    "title": "Find area of existing action that must be on the same land cover as UPL3",
  },
  {
    "content": [
      "Stack 1 - UPL1 - 0.1 ha",
      "",
      "Explanation:",
      "Adding UPL1 (area 0.1 ha)",
      "  Created Stack 1 for UPL1 with area 0.1 ha",
    ],
    "title": "Stacks",
  },
  {
    "content": [
      "Total valid land cover: 0 ha",
      "- 0.1 (Stack 1)",
      "= -0.1 ha available for UPL3",
    ],
    "title": "Result",
  },
]
`;
